// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should match snapshot for a supplied type 1`] = `
<div
  className="alert alert--success"
>
  <h1>
    Alert Title
  </h1>
  <p>
    Alert body content
  </p>
</div>
`;

exports[`Alert should match snapshot for default alert if type not supplied 1`] = `
<div
  className="alert alert--info"
>
  <h1>
    Alert Title
  </h1>
  <p>
    Alert body content
  </p>
</div>
`;
